--- a/web/src/main/webapp/static/index.html
+++ b/web/src/main/webapp/static/index.html
@@ -125,10 +125,9 @@
                 //Removes channel_
                 var channelId = panelId.substring(8);
 
-
                 $.ajax({
                   dataType: "json",
-                  url: "resources/channels/" + channelId + "/" + (isPause ? "pause" : "unpause") ,
+                  url: "/channels/" + channelId + "/" + (isPause ? "pause" : "unpause") ,
                   success: function( data ) {
                                 console.info("data", data);
 
@@ -151,7 +150,7 @@
 
                 $.ajax({
                   dataType: "json",
-                  url: "resources/channels/" + channelId + "/force" ,
+                  url: "/channels/" + channelId + "/force" ,
                   success: function( data ) {
                                 console.info("data", data);
 
@@ -192,7 +191,7 @@
 
                 $.ajax({
                   dataType: "json",
-                  url: "resources/channels",
+                  url: "/channels",
                   //data: data,
                   success: function( data ) {
 
